//***************
//Version History
//***************
[4.7.11]
+ Added google.com.eg to the list of available top-level domains
+ Updated the menuitem label for the translate command
+ The Google dictionary search button and menuitem are now disabled when the search box is empty

--

[4.7.10]
+ Altered the Google dictionary search since Google has shut down that dedicated service
+ Bumped the maxVersion to 12.* to work around Mozilla's annoying new release schedule
+ Added google.sk to the list of available top-level domains
+ Bug Fix: Corrected an error with the addProgressListener call
+ Bug Fix: Reverted a style rule change that caused search word button labels to disappear in some themes

--

[4.7.9]
+ Changed the default keyboard shortcut for setting search box focus to Ctrl+Shift+S (was Ctrl+Shift+K)
+ Added support for Firefox 5 and 6
+ Added a new Estonian translation (et-EE)
+ Various locale updates
+ Relaxed the importance of style rules in the Googlebar Lite stylesheet
+ Bug Fix: Search terms surrounded by double quotes are now highlighted properly

--

[4.7.8]
+ Replaced Answers.com search type with Google Dictionary (English dictionary only for now)
+ Various locale updates
+ Bug Fix: Dragging and dropping text should no longer result in duplicated text
+ Bug Fix: Fixed broken logic used to show and hide the search word overflow button
+ Bug Fix: Improved the logic for displaying toolbar separators

--

[4.7.7]
+ Bug Fix: Corrected a few parsing issues in the search word button filter which were introduced in 4.7.6.

--

[4.7.6]
+ Improved styling in a few places.
+ Removed the style rules for the Qute and Noia themes.
+ Bug Fix: Corrected a resize issue that was causing a phantom chrome element to appear in Firefox 4.
+ Bug Fix: URLs passed as a part of several context menu search types are now wrapped in encodeURIComponent() calls, preventing certain URLs from failing to load.